<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ФонПервогоАктивити"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/firstTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/marginFirstActivity"
        android:background="@color/ФонTextView"
        android:padding="10dp"
        android:text="@string/text_view"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/size_text"
        android:fontFamily="@font/segoescb"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginFirstActivity"
        android:hint="@string/type_something"
        android:textColorHint="@color/hintColor"
        android:inputType="text"/>

    <Button
        android:id="@+id/myFirstButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/marginFirstActivity"
        android:backgroundTint="@color/colorButton"
        android:text="@string/pressMe"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/clickСounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/marginFirstActivity"
        android:fontFamily=""
        android:text="@string/counterText" />

    <ToggleButton
        android:id="@+id/bothFeatures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textOff="@string/allOptionsOff"
        android:textOn="@string/allOptionsOn"
        android:textSize="@dimen/size_text">

    </ToggleButton>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/feature1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textOptions1" />

        <CheckBox
            android:id="@+id/feature2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textOptions2" />

    </LinearLayout>

    <TextView
        android:id="@+id/textFeatures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Switch
        android:id="@+id/testSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textTestSwitch" />

    <Button
        android:id="@+id/backToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textBackToMain" />
</LinearLayout>