<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ФонПервогоАктивити"
    android:orientation="vertical"
    android:paddingTop="10dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/task1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textTask1"
        android:textAllCaps="false"
        android:backgroundTint="@color/black"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/task2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textTask2"
        android:textAllCaps="false"
        android:backgroundTint="@color/black"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/task3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textTask3"
        android:textAllCaps="false"
        android:backgroundTint="@color/black"
        android:layout_gravity="center"
        />

</LinearLayout>